Update email address

--- a/paper/optimizer_energy_efficiency.tex
+++ b/paper/optimizer_energy_efficiency.tex
@@ -33,7 +33,7 @@
 \IEEEauthorblockN{Tom Almog}
 \IEEEauthorblockA{University of Waterloo\\
 Waterloo, Ontario, Canada\\
-Email: t2almog@uwaterloo.ca}
+Email: talmog@uwaterloo.ca}
 }
 
 \maketitle
