--- a/paper/optimizer_energy_efficiency.tex
+++ b/paper/optimizer_energy_efficiency.tex
@@ -250,7 +250,7 @@ Figure \ref{fig:accuracy_vs_emissions} illustrates the fundamental trade-off bet
 
 \begin{figure*}[htbp]
 \centering
-\includegraphics[width=\textwidth]{../results/plots/accuracy_vs_emissions.png}
+\includegraphics[width=\textwidth]{accuracy_vs_emissions.png}
 \caption{Performance vs. Environmental Impact Trade-offs. Each point represents the mean performance across 15 experimental runs, with error bars showing standard deviations. The position of optimizers reveals distinct trade-off patterns across datasets of varying complexity.}
 \label{fig:accuracy_vs_emissions}
 \end{figure*}
@@ -267,7 +267,7 @@ Figure \ref{fig:training_duration} presents training duration distributions acro
 
 \begin{figure*}[htbp]
 \centering
-\includegraphics[width=\textwidth]{../results/plots/training_duration_boxplots.png}
+\includegraphics[width=\textwidth]{training_duration_boxplots.png}
 \caption{Training Duration Distributions by Optimizer and Dataset. Box plots show median, quartiles, and outliers across 15 experimental runs. Note the increasing variability and duration with dataset complexity.}
 \label{fig:training_duration}
 \end{figure*}
@@ -282,7 +282,7 @@ Figure \ref{fig:emissions_rate} presents a heatmap of average emissions rates (k
 
 \begin{figure*}[htbp]
 \centering
-\includegraphics[width=0.8\textwidth]{../results/plots/emissions_rate_heatmap.png}
+\includegraphics[width=0.8\textwidth]{emissions_rate_heatmap.png}
 \caption{CO$_2$ Emissions Rate Heatmap (kg/s). Darker colors indicate higher emissions rates. The pattern reveals that emissions intensity varies significantly across optimizers and scales with dataset complexity.}
 \label{fig:emissions_rate}
 \end{figure*}
