Update title across all files

--- a/paper/optimizer_energy_efficiency.tex
+++ b/paper/optimizer_energy_efficiency.tex
@@ -27,7 +27,7 @@
 
 \begin{document}
 
-\title{A Comprehensive Analysis of Optimizer Choice on Energy Efficiency and Performance in Neural Network Training: Evidence from 360 Controlled Experiments}
+\title{An Analysis of Optimizer Choice on Energy Efficiency and Performance in Neural Network Training}
 
 \author{
 \IEEEauthorblockN{Tom Almog}
